# rusty_practice

./: Cargo.toml  README.md  prior_snippets.txt
camus/: Cargo.toml
camus/src/: lib.rs
src/: camus.rs  lib.rs  main.rs  playpen.rs
